# usa_customer_shopping_trends

./: README.md  airflow.cfg  airflow.db  airflow_restart.sh  dags  pyproject.toml  test.md
diagrams/: Architecture.drawio  Homann.HEIC  Untitled Diagram.drawio
src/: airflow.cfg  airflow.db  airflow_restart.sh  data_ingestion_to_gcs.py  requirement.txt  usa_sales_dashboard.pbix
src/dags/: example_bash_operator.py  example_python_operator.py  ge_checks_sales.py  shopping_data_gcs_to_bq.py  upload_data_to_gcs.py
src/dashboard/: usa_sales_dashboard.pbix
src/dbt_src/: dbt_project.yml
src/dbt_src/models/sales/: vw_shopping_trends.sql
src/dbt_src/tests/: shopping_trends.yml
src/gx/: great_expectations.yml
src/gx/expectations/: .ge_store_backend_id  sales_suite.json
src/soda/: configuration.yml
