[tool.poetry]
name = "usa-customer-shopping-trends"
version = "0.1.0"
description = "Customer buying patterns"
authors = ["abhiiiiiiijit <abhijitjan22@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.4"
apache-airflow-providers-google = "^11.0.0"
dbt-core = "^1.9.1"
dbt-bigquery = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
